--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:singlespec": "npx cypress run  --spec cypress/e2e/tests/registorTest.cy.js"
   },
   "author": "",
   "license": "ISC",
