--- a/.github/workflows/customBuild.yml
+++ b/.github/workflows/customBuild.yml
@@ -1,12 +1,14 @@
 name: Custom sanity
-'on': push
+on: push
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      # Install npm dependencies, cache them correctly
+      # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          commond: 'test:singlespec'
+            commond: test:singlespec
